# mandelbrot-glsl

./: Cargo.toml  README.md
src/: main.rs  mandelbrot.glslf
src/shader/: mandelbrot.glslf  mandelbrot.glslv
