[package]
name = "mandelbrot_glsl"
version = "0.1.0"
authors = ["Amandus Thorsrud <ama.thorsrud@gmail.com>"]
edition = "2018"

[features]
console = []

[dependencies]
gfx = { git = "https://github.com/gfx-rs/gfx", branch = "pre-ll" }
glutin = "0.18.0"
gfx_window_glutin = { git = "https://github.com/gfx-rs/gfx", branch = "pre-ll" }
